--- a/_data/pages.yml
+++ b/_data/pages.yml
@@ -2,4 +2,5 @@ pages:
   - {name: 'Home', url: '/'}
   - {name: 'Apply', url: '/apply.html'}
   - {name: 'Program', url: '/program.html'}
-  - {name: 'venue', url: '/venue.html'}
+  - {name: 'Venue', url: '/venue.html'}
+  - {name: 'Life in Ljubljana', url: '/ljubljana.html'}
