--- a/_data/pages.yml
+++ b/_data/pages.yml
@@ -4,3 +4,4 @@ pages:
   - {name: 'Program', url: '/program.html'}
   - {name: 'Venue', url: '/venue.html'}
   - {name: 'Life in Ljubljana', url: '/ljubljana.html'}
+  - {name: 'Poster', url: '/poster.html'}
