--- a/_data/pages.yml
+++ b/_data/pages.yml
@@ -1,7 +1,5 @@
 pages:
   - {name: 'Home', url: '/'}
-  - {name: 'Apply', url: '/apply.html'}
-  - {name: 'Program', url: '/program.html'}
-  - {name: 'Venue', url: '/venue.html'}
-  - {name: 'Life in Ljubljana', url: '/ljubljana.html'}
-  - {name: 'Poster', url: '/poster.html'}
+  - {name: 'Sodelovanja', url: '/sodelovanja.html'}
+  - {name: 'Interdisciplinarni članki', url: '/clanki.html'}
+  - {name: 'Prakse', url: '/prakse.html'}
