--- a/_data/pages.yml
+++ b/_data/pages.yml
@@ -1,5 +1,6 @@
 pages:
-  - {name: 'Home', url: '/'}
+  - {name: 'Domov', url: '/'}
   - {name: 'Sodelovanja', url: '/sodelovanja.html'}
   - {name: 'Interdisciplinarni članki', url: '/clanki.html'}
   - {name: 'Prakse', url: '/prakse.html'}
+  - {name: 'Kontakt', url: '/kontakt.html'}
