--- a/_data/pages.yml
+++ b/_data/pages.yml
@@ -1,5 +1,6 @@
 pages:
   - {name: 'Home', url: '/'}
+  - {name: 'Apply', url: '/apply.html'}
   - {name: 'Venue', url: '/venue.html'}
   - {name: 'Life in Ljubljana', url: '/ljubljana.html'}
   - {name: 'Poster', url: '/poster.html'}
