--- a/_data/pages.yml
+++ b/_data/pages.yml
@@ -1,6 +1,7 @@
 pages:
   - {name: 'Home', url: '/'}
   - {name: 'Program', url: '/program.html'}
+  - {name: 'Apply', url: '/apply.html'}
   - {name: 'Venue', url: '/venue.html'}
   - {name: 'Life in Ljubljana', url: '/ljubljana.html'}
   - {name: 'Poster', url: '/poster.html'}
